--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ##Database Configuration
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Veterinary?serverTimezone=Turkey
+spring.datasource.url=jdbc:mysql://localhost:3306/veterinary?serverTimezone=Turkey
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=create-drop
